# KO

./: README.md
contest/: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py
contest/2024/: README.md  main.cpp
contest/2025/: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  main.py  optimal.py
contest/2025/dataset/: 1.out
contest/2025/dataset/optimal/: 1.ins  2.ins  2.out
contest/2025/dataset/threshold/: 1.ins  2.ins  3.ins  4.ins
hw/01/: README.md  main.py
hw/02/: README.md  main.py  old.py
hw/03/: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
hw/04/: .gitignore  CMakeLists.txt  main.cpp  main.py
hw/04_2025/: main.py
labs/01/: [Lab_01_Introduction].ipynb  [Lab_01_Introduction]_Transportation.ipynb
labs/01/example/: example.py
labs/02/: [Lab_02_ILP_basics_HANDOUT].ipynb
labs/03/: [Lab_03_ILP1]_Tiles.ipynb  [Lab_03_ILP_1]_Tiles.ipynb  [Lab_03_ILP_1_HW1]_Call_Center_Scheduling.ipynb
labs/04/: [Lab_04_ILP_2]_Peaking_Power_Plants.ipynb  [Lab_04_ILP_2]_Tents_in_the_Forest.ipynb  [Lab_04_ILP_2_HANDOUT]_Settle_Up.ipynb
labs/05/: [Lab_05_ILP_3]_Lazy_Constraints_Circle_Approximation.ipynb
labs/06/: [Lab_06_Interesting_ILP]_Game_of_Fivers.ipynb
labs/07/: [Lab_07_Metaheuristics].ipynb
labs/2024/01/: [Lab_01_Introduction].ipynb  [Lab_01_Introduction]_Transportation.ipynb
labs/2024/03/: [Lab_03_ILP1_HANDOUT]_Catering.ipynb  [Lab_03_ILP_1_HANDOUT]_Catering.ipynb  [Lab_03_ILP_1_HW1]_Call_Center_Scheduling.ipynb
labs/2025/01/: test.py  (+1 more)
lectures/: lecture03.ipynb  lecture04.ipynb
tests/chess/: main.py
tests/practical/: main.py
tests/practical25/: main.py
(+29 files in other folders)
